--- a/package.json
+++ b/package.json
@@ -14,12 +14,14 @@
     "eslint": "^4.9.0",
     "express": "~4.15.2",
     "express-handlebars": "^3.0.0",
+    "express-session": "^1.15.6",
     "mongoose": "^4.11.13",
     "morgan": "~1.8.1"
   },
   "devDependencies": {
     "chai": "^4.1.2",
     "eslint-config-google": "^0.9.1",
+    "express-session": "^1.15.6",
     "jsdom": "^9.12.0",
     "mocha": "^3.0.0",
     "supertest": "^3.0.0",
